--- a/index.html
+++ b/index.html
@@ -9,19 +9,57 @@
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">Chiara Saverino</a>
+  <a href="#default" class="logo">Dentista Chiara Saverino</a>
   <div class="header-right">
-    <a class="active" href="#About">About</a>
-    <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
+    <a class="active" href="#Appointment">Appointment</a>
+    <a href="#Team">Team</a>
+    <a href="#Contact">Contact</a>
   </div>
 </div>
 
 <div style="padding-left:20px">
-  <h1>Responsive Header</h1>
+  <h1>Benvenuti, Welcome, Bonjour and Buenos Dias!</h1>
+  <img src="content/Dottoressa_Saverino.png" alt="Dentista" style="width:256px;height:256px;"><br>
+
   <p>Resize the browser window to see the effect.</p>
   <p>Some content..</p>
+
+  <p>
+    <h1> Book your appointment on </h1><br>
+    <a class="button" href="https://www.miodottore.it/chiara-saverino/dentista-igienista-dentale-ortodontista/catania#address-id=%5B867195%5D&filters%5Bspecializations%5D%5B%5D=10">Appointment</a>
+  </p>
+    
+    
+
+  <p>
+  <h1> Services </h1><br>
+  <ul>
+    <li>Orthodontics</li>
+    <li>Cleaning</li>
+  </ul>
+  </p>
+
 </div>
 
+
+d
+<p>           
+  <h1> The Team </h1><br>
+</p>
+<p>           
+  <h1> My Facilities </h1><br>
+</p>
+
+<p>           
+  <h1> What my patients say </h1><br>
+</p>
+
+<p>
+<h1> Book your appointment on </h1><br>
+<a id="external_link" href="https://www.miodottore.it/chiara-saverino/dentista-igienista-dentale-ortodontista/catania#address-id=%5B867195%5D&filters%5Bspecializations%5D%5B%5D=10">miodottore</a>
+</p>
+
+
 </body>
+<footer> &copy Copyright 2024 Chiara Saverino</footer>
 </html>
