added new tab for external link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <a href="#default" class="logo">Dentista Chiara Saverino</a>
 
   <div class="header-right">
-    <a class="active" href="#Appointment" ><i class="fa fa-calendar" aria-hidden="true"></i> Appointment</a>
+    <a target="_blank" rel="noopener noreferrer" class="active" id="external_link" href="https://www.miodottore.it/chiara-saverino/dentista-igienista-dentale-ortodontista/catania#address-id=%5B867195%5D&filters%5Bspecializations%5D%5B%5D=10"><i class="fa fa-calendar" aria-hidden="true"></i> Appointment</a>
     <a href="#Team">Team</a>
     <a href="#Contact">Contact</a>
   </div>
