--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <!-- Link Swiper's CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Link Swiper's CSS -->
+<link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+/>
 
   <title>Studio Dentista Saverino</title>
-   <style>
-
-   .container{
-   max-width:1200px;
-   width:100%;
-   position:relative;
-   margin:0 auto;
-   }
+  
+  <style>
+    .container{
+    max-width:1200px;
+    width:100%;
+    position:relative;
+    margin:0 auto;
+    }
     .mySwiper{
     max-width: 1100px;
-    height: 100vh;
+    height: 60vh;
     display: flex;
     align-items: center;
     }
@@ -72,9 +73,9 @@
 	color:orange;
 	}
 </style>
+
 </head>
 <body>
-
 <div class="header">
   <a href="#default" class="logo">Dentista Chiara Saverino</a>
 
@@ -228,7 +229,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.2439815971725!2d15.077069275344224!3d37.525745572049125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1313e35d41377899%3A0xb2b4df0c5a9e0676!2sDott.ssa%20Chiara%20Saverino%2C%20Dentista!5e0!3m2!1sen!2sde!4v1716470428578!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 </div>
 
-
+<!--
 <h1>Contactform</h1>
 <div class="container">
   <form action="action_page.php">
@@ -255,7 +256,7 @@
 
   </form>
 </div>
-
+-->
 
 </body>
 <footer> &copy Copyright 2024 Chiara Saverino</footer>
