added design bottom

--- a/index.html
+++ b/index.html
@@ -207,32 +207,31 @@
 </p>
 
 <p>           
-  <h1> What my patients say </h1><br>
+  <h1> Find us </h1><br>
 </p>
 
 
 <p>
 
 <div class="bottom">
-  <h2><i class="fa-solid fa-location-dot"></i> Via Ardizzone Gioeni, 36, 95100 Catania CT, Italy</h2>
-<ul>
-  <li><i class="fa fa-mobile" aria-hidden="true"></i> +39 xxxxxxx</li>
-  <li><i class="fa fa-envelope-square" aria-hidden="true"></i> Chiara Saverino@gmail.com</li>
-</ul>
+  <h2><i class="fa-solid fa-location-dot"></i> Via Ardizzone Gioeni, 36, 95100 Catania CT, Italy
+
+  <div id="contentframe" style= "float:right; margin-right: 30px; left: 800px; ">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.2439815971725!2d15.077069275344224!3d37.525745572049125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1313e35d41377899%3A0xb2b4df0c5a9e0676!2sDott.ssa%20Chiara%20Saverino%2C%20Dentista!5e0!3m2!1sen!2sde!4v1716470428578!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+    </div>
+<h2><i class="fa-regular fa-comment"></i> +39 xxxxxxx  </h2>
+<h2><i class="fa-regular fa-envelope" aria-hidden="true"></i> Chiara Saverino@gmail.com </h2>
 <h2><i class="fa-regular fa-clock"></i> Ora di aperta</h2>
 <ul>
   <li>Lundi 9:00 - 1600</li>
   <li>Martedi 9:00 - 1600</li>
 </ul>
+
+
 </div>
 
-
-
-<div id="contentframe" style="position:relative;  left: 800px;">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.2439815971725!2d15.077069275344224!3d37.525745572049125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1313e35d41377899%3A0xb2b4df0c5a9e0676!2sDott.ssa%20Chiara%20Saverino%2C%20Dentista!5e0!3m2!1sen!2sde!4v1716470428578!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-</div>
 
 
 </body>
-<footer> &copy Copyright 2024 Chiara Saverino</footer>
+
 </html>
