--- a/index.html
+++ b/index.html
@@ -20,60 +20,45 @@
   <title>Studio Dentista Saverino</title>
   
   <style>
-    .container{
-    max-width:1200px;
-    width:100%;
-    position:relative;
-    margin:0 auto;
-    }
-    .mySwiper{
-    max-width: 1100px;
-    height: 60vh;
-    display: flex;
-    align-items: center;
-    }
-    .card{
-    text-align: center;
-    background-color: #ffffff;
-    padding:20px 30px;
-    border-radius: 10px;
-	box-shadow:rgb(149 157 165 / 20%) 0px 8px 24px;
-    }
-	.swiper-slide{
-	display:flex;
-	align-items:center;
-	}
-    .card img{
-    width: 130px;
-    border-radius: 50%;
-	margin-top:-70px;
-    }
-    h3,h4{
-    margin-bottom: 0px;
-    margin-top: 0px;
-    }
-	p{
-	font-size:15px;
-	line-height:20px;
-	color:#222222;
-	}
-    h3{
-    font-size: 16px;
-    }
-    h4{
-    font-size: 12px;
-    margin-top: 10px;
-    color:#0096FF;
-    }
-	.swiper-button-next, .swiper-rtl .swiper-button-prev{
-	color:#0096FF;
-	}
-	.swiper-button-next:after, .swiper-button-prev:after{
-	font-size:32px;
-	}
-	.review i{
-	color:orange;
-	}
+  /* Review Section */
+.container{
+  max-width:1200px;
+  width:100%;
+  position:relative;
+  margin:0 auto;
+  }
+  .mySwiper{
+  max-width: 1100px;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  }
+  .card{
+  text-align: center;
+  background-color: #ffffff;
+  padding:20px 30px;
+  border-radius: 10px;
+box-shadow:rgb(149 157 165 / 20%) 0px 8px 24px;
+  }
+.swiper-slide{
+display:flex;
+align-items:center;
+}
+.card img{
+  width: 130px;
+  border-radius: 50%;
+margin-top:-70px;
+  }
+.swiper-button-next, .swiper-rtl .swiper-button-prev{
+color:#0096FF;
+}
+.swiper-button-next:after, .swiper-button-prev:after{
+font-size:32px;
+}
+.review i{
+color:orange;
+}
+
 </style>
 
 </head>
@@ -227,10 +212,7 @@
   <li>Martedi 9:00 - 1600</li>
 </ul>
 
-
 </div>
-
-
 
 </body>
 
